<?xml version="1.0"?>
<package format="3">
  <name>event_camera_convert_rosbag</name>
  <version>1.0.0</version>
  <description>package with ROS1 and ROS2 event camera rosbag conversion tool</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>


  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_ros</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_py</depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>


  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>

  <!-- common ROS1/ROS2 dependencies -->
  <depend>event_camera_msgs</depend>
  <depend>event_array_msgs</depend>
  <depend>ros_environment</depend>
  
  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
